Corrected spacing issues

--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ body {
   width: 100%;
   margin: 0;
   padding: var(--line-height) 2ch;
-  max-width: calc(min(100ch, round(down, 100%, 1ch)));
+  max-width: calc(min(80ch, round(down, 100%, 1ch)));
   line-height: var(--line-height);
   overflow-x: hidden;
 }
